<resources>
    <string name="app_name">Inventory</string>
    <string name="error_in_data_insertion_str">Error In Data Insertion</string>
    <string name="data_insertion_sucessful_str">Date Successfully Inserted</string>
    <string name="editor_update_item_failed">Update Failed</string>
    <string name="editor_update_item_successful">Update Successfully</string>
    <string name="button_sale">Sale</string>
    <string name="button_edit">Edit</string>
    <string name="sale_update_item_failed">Quantity Update For The Item Has Failed</string>
    <string name="sale_update_item_successful">Quantity Update For The Item Has Successfully Completed</string>
    <string name="editor_update_zero_item_failed">Product Is Already Out Of Stock</string>
    <string name="empty_text">Press + icon at the top right to insert data.</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone Number</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="details">Detail Activity</string>
    <string name="edit_activity">Edit Activity</string>
</resources>
